<resources>
    <string name="app_name">Football-Apps</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="favorites">Favorite</string>
    <string name="hello_world">Hello</string>
    <string name="content_desc">Poster</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="yellow_card_away">Yellow Card ( Away )</string>
    <string name="red_card_away">Red Card ( Away )</string>
    <string name="goal_away">Goal Away</string>
    <string name="yellow_card_home">Yellow Card ( Home )</string>
    <string name="red_card_home">Red Card ( Home )</string>
...
    <string name="listLeague">List League</string>
    <string name="notfound">Not Found</string>
    <string name="overview">overview</string>
    <string name="website">Website :</string>
    <string name="title_activity_detail_league">Detail League</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="team">Team</string>
    <string name="p">P</string>
    <string name="GM">GM</string>
    <string name="W">W</string>
    <string name="D">D</string>
    <string name="l">L</string>
    <string name="point">Point</string>
...
